--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "command.hook",
+  "name": "pull-checkout-merge-command.hook",
   "version": "0.0.0",
-  "description": "Run scripts after certain git commands are used. Great for compiled source mangeagement between branches and automating magrations",
+  "description": "Run scripts after `pull`, `merge` and `checkout` succeed. Great for compiled source management between branches and automating migrations",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcwhittemore/command.hook"
+    "url": "https://github.com/mcwhittemore/pull-checkout-merge-command.hook"
   },
   "keywords": [
     "git",
@@ -26,6 +26,10 @@
   "author": "Matthew Chase Whittemore <mcwhittemore@gmail.com>",
   "license": "GNU-GPL-2",
   "bugs": {
-    "url": "https://github.com/mcwhittemore/command.hook/issues"
+    "url": "https://github.com/mcwhittemore/pull-checkout-merge-command.hook/issues"
+  },
+  "hook-module": {
+    "script-type": "node",
+    "valid-for": ["post-merge", "post-checkout"]
   }
 }
