--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "description": "Run scripts after `pull`, `merge` and `checkout` succeed. Great for compiled source management between branches and automating migrations",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "colors": "~0.6.2"
+  },
   "devDependencies": {
     "mocha": "~1.13.0",
     "node-hooks": "0.0.2"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "pcm-command": "echo \"pcm-comand\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,9 @@
   },
   "hook-module": {
     "script-type": "node",
-    "valid-for": ["post-merge", "post-checkout"]
+    "valid-for": [
+      "post-merge",
+      "post-checkout"
+    ]
   }
 }
